# near-party-bid

./: README.md
party-bid/: .gitignore  README.md  package-lock.json  package.json
party-bid/contract/: Cargo.toml  README.md  compile.js
party-bid/contract/src/: greeter.wasm  lib-2.rs  lib.rs  lib2.rs
party-bid/contracts/: compile.js  test.bat
party-bid/contracts/factory/: Cargo.toml
party-bid/contracts/factory/src/: lib.rs  party.wasm
party-bid/contracts/factory/src/neardev/: dev-account  dev-account.env
party-bid/contracts/governance/: Cargo.toml
party-bid/contracts/governance/src/: lib.rs
party-bid/contracts/party/: Cargo.toml
party-bid/contracts/party/src/: lib.rs
party-bid/contracts/party/src/neardev/: dev-account  dev-account.env
party-bid/lambda/: README.md  hourlycheck.js  index.js  indexer.js  searcher.js
party-bid/src/: App.js  config.js  index.html  index.js  utils.js
party-bid/src/common/: constants.js  utils.js
party-bid/src/common/theme/: index.js
party-bid/src/components/: AuctionStatusComponents.js  ContributionCard.js  ContributionFeed.js  CreateBlocModal.js  Footer.js  Layout.js  LiveFeed.js  Loader.js  LoginView.js  NFTCard.js  Navbar.js  svgs.js
party-bid/src/components/ContributionCard/: LoginPanelStates.js  VoteModal.js  index.js
party-bid/src/data/: indexer.js  updateContract.js
party-bid/src/views/: bloc.js  blocs.js  create_party.js  create_team.js  gov.js  home.js  index.js  marketplace.js  party.js  team.js  teams.js
party-bid/src/wallet/login/: index.html
(+1 files in other folders)
